Minified CSS file

--- a/styles.scss
+++ b/styles.scss
@@ -81,6 +81,7 @@ header {
   height: 100vh;
   background: url(images/bg.jpg) no-repeat center center;
   background-size: cover;
+  background-attachment: fixed;
   position: relative;
   .text-wrapper {
     position: absolute;
