--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,7 @@ header {
   height: 100vh;
   background: url(images/bg.jpg) no-repeat center center;
   background-size: cover;
+  background-attachment: fixed;
   position: relative; }
   .banner .text-wrapper {
     position: absolute;
