--- a/styles.scss
+++ b/styles.scss
@@ -64,7 +64,7 @@ header {
     .nav-links {
       text-transform: uppercase;
       font-weight: 700;
-      color: $primary-color;
+      color: $font-color-white;
       margin: 0 8px;
       font-size: 1.4em;
       @media screen and (min-width: $mobile-small) and (max-width: $mobile-medium) {
