--- a/styles.scss
+++ b/styles.scss
@@ -141,9 +141,9 @@ header {
 .content {
   background-color: $primary-color;
   color: $font-color-white;
-  padding: 15px 0 30px 0;
+  padding: 15px 30px;
   @media screen and (min-width: $tablet) {
-    padding: 40px 0 70px 0;
+    padding: 40px 70px;
   }
   &__title {
     margin-top: 12px;
